<resources>
    <string name="app_name">lab 04 - Toggles adn Dialogs (Lukyanov)</string>
    <string name="cbApple">Apple</string>
    <string name="cbStrawberry">Strawberry</string>
    <string name="cbBlueberry">Blueberry</string>
    <string name="cbPotatoes">Potatoes</string>
    <string name="butCalc">Calculate</string>
    <string name="label_Product">Product</string>
    <string name="label_Price">Price (for one)</string>
    <string name="label_Count">Count</string>
    <string name="rbToast">Toast</string>
    <string name="rbDialog">Dialog</string>
</resources>